# office-oxide-php

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  composer.json  deny.toml  office_oxide_php.stubs.php  phpunit.xml
.github/workflows/: ci.yml  release.yml
bench/: README.md  composer.json  gen_fixtures.php  gen_image_fixtures.php  run.php  worker.php
docs/: API.md
src/: ir.rs  lib.rs  ser.rs
tests/fixtures/: make-with-image.php  sample.docx  with-image.docx
tests/php/: DocumentTest.php  ImageTest.php  smoke.php
